--- a/index.html
+++ b/index.html
@@ -5,22 +5,26 @@
   <title>Valentine?</title>
   <style>
     body {
-      background: #ffd6e7;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    background-image: url("bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 16px;
-      text-align: center;
-      width: 300px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-    }
+  .card {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 30px;
+    border-radius: 16px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  }
 
     h2 {
       margin-bottom: 20px;
