--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Valentine?</title>
   <style>
     body {
-    background-image: url("bg.jpg");
+    background-image: url("bg.jpeg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
