--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <div class="card">
     <h2>Rakshita, will you be my Valentine? ❤️</h2>
-    <button id="yes" onclick="alert('Yay! ❤️')">Yes</button>
+    <button id="yes" onclick="alert('Yay! ❤️ You just made me the happiest person 😘❤️')">Yes</button>
     <button id="no">No</button>
   </div>
 
